# photo-manager

./: .env.example  .gitignore  QUICKSTART.md  README.md  SETUP_GUIDE.md  pyproject.toml
photo_manager/: __init__.py  cli.py
photo_manager/auth/: __init__.py
photo_manager/models/: __init__.py
photo_manager/services/: __init__.py  google_photos.py  onedrive.py
tests/: test_photo_manager.py
